# simple_webite_in_python

./: LICENSE  README.md  app.py  pyproject.toml
templates/: home.html
